--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,1 +1,45 @@
 <p>table works!</p>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name </th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="birth_year">
+    <th mat-header-cell *matHeaderCellDef> Birth year </th>
+    <td mat-cell *matCellDef="let element"> {{element.birth_year}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="skin_color">
+    <th mat-header-cell *matHeaderCellDef> Skin color </th>
+    <td mat-cell *matCellDef="let element"> {{element.skin_color}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="gender">
+    <th mat-header-cell *matHeaderCellDef> Gender </th>
+    <td mat-cell *matCellDef="let element"> {{element.gender}} </td>
+  </ng-container>
+
+<!--  <ng-container matColumnDef="species">-->
+<!--    <th mat-header-cell *matHeaderCellDef> Species </th>-->
+<!--    <td mat-cell *matCellDef="let element"> {{ element.species}} </td>-->
+<!--  </ng-container>-->
+
+<!--  <ng-container matColumnDef="homeworld">-->
+<!--    <th mat-header-cell *matHeaderCellDef> Homeworld </th>-->
+<!--    <td mat-cell *matCellDef="let element"> {{element.homeworld}} </td>-->
+<!--  </ng-container>-->
+<!--  <ng-container matColumnDef="actions">-->
+<!--    <th mat-header-cell *matHeaderCellDef> Actions </th>-->
+<!--    <td mat-cell *matCellDef="let element">-->
+<!--      <button (click)="openDialog(element)">Details</button>-->
+<!--    </td>-->
+
+<!--  </ng-container>-->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
